
Fixes for mediatool and friends.
----------------------------------------------------------------------
Sun Nov  4 20:47:26 2001                        Michael Jennings (mej)

Let's try this again.
----------------------------------------------------------------------
Sun Nov  4 20:48:32 2001                        Michael Jennings (mej)

Scripts work better when they are executable....
----------------------------------------------------------------------
Mon Nov  5 12:02:22 2001                        Michael Jennings (mej)

New tool for making bootable CD's.
----------------------------------------------------------------------
Thu Nov 29 13:52:06 2001                        Michael Jennings (mej)

Lots of changes over the past month.... :-)
----------------------------------------------------------------------
Thu Dec 20 19:25:40 2001                        Michael Jennings (mej)

The beginnings of some SGML documentation.
----------------------------------------------------------------------
Wed Jan  2 19:12:58 2002                        Michael Jennings (mej)

Debian packaging goop.  Yikes.
----------------------------------------------------------------------
Thu Jan  3 10:12:16 2002                        Michael Jennings (mej)

Cleaned up the Debian stuff thanks to some help from Brian Almieda
<bma@debian.org>.
----------------------------------------------------------------------
Thu Jan  3 10:16:44 2002                        Michael Jennings (mej)

Make sure to include debian/ directory in source tarball.
----------------------------------------------------------------------
Fri Jan  4 18:36:49 2002                        Michael Jennings (mej)

Working on deb support.
----------------------------------------------------------------------
Mon Feb 18 15:38:36 2002                        Michael Jennings (mej)

Added support for passing SRPM's to mzmerge.
----------------------------------------------------------------------